--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           `AdashimaaTube Main
+@name           `AdashimaaTube
 @author         sapondanaisriwan <sapondanaisriwan@gmail.com> (https://github.com/sapondanaisriwan)
 @description    If you want to submit a bug or request a feature please report via github issue. Since I receive so many emails, I can't reply to them all.
 @namespace      https://userstyles.world/user/sapondanaisriwan
