--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -256,6 +256,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             }
 
             /* Display unloaded videos per row when refresh the homepage */
+            #home-page-skeleton .rich-grid-media-skeleton,
             #home-page-skeleton .rich-shelf-videos .rich-grid-media-skeleton.mini-mode,
             #home-page-skeleton #home-container-media .rich-grid-media-skeleton.mini-mode {
                 min-width: calc(100% / var(--video-per-row) - 1.6rem);
