--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -382,6 +382,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
         /* ⚒️ Custom Search Page */
         if (searchPage=="Enabled" || searchPage=="Auto") {
 
+            ytd-section-list-renderer[engagement-panel]:not([engagement-panel-dropdown]):not([watch-while-engagement-panel]) #contents.ytd-section-list-renderer {
+                overflow-y: hidden;
+            }
+
             /* 🔎 Search Result In A Grid */
             ytd-search.ytd-page-manager {
 
@@ -1528,8 +1532,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
     yt-formatted-string[has-link-only_]:not([force-default-style]) a.yt-simple-endpoint.yt-formatted-string:hover {
         color: unset;
     }
-    
-    
+
+
     /* Reverts the channel author on wathcpage*/
     ytd-video-owner-renderer[modern-metapanel] #channel-name.ytd-video-owner-renderer {
         font-family: "Roboto", "Arial", sans-serif;
@@ -2119,7 +2123,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
 
         /* Removes border */
-        .yt-spec-button-shape-next--size-m,
         .yt-spec-touch-feedback-shape__stroke {
             border-radius: borderRadius i;
         }
@@ -2150,7 +2153,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         }
 
         .ytp-settings-menu.ytp-rounded-menu {
-            border-radius: borderRadius;
+            border-radius: borderRadius i;
         }
 
         ytd-menu-popup-renderer[sheets-refresh] {
@@ -2162,6 +2165,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             border-radius: 16px i;
         }
 
+        .yt-spec-button-shape-next--size-m,
         /* Subscribe button in the end screen */
         .ytp-sb-subscribe.ytp-sb-rounded,
         .ytp-sb-unsubscribe.ytp-sb-rounded,
@@ -2334,6 +2338,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
         font-family: "no-parens", "Roboto", sans-serif;
     }
 
+    /* Remove shop section */
+    ytd-merch-shelf-renderer.ytd-watch-flexy {
+        display: none;
+    }
+    
     /* Remove parentheses Credit to decembre, Pabli */
     /*     span.ytp-menu-label-secondary {
         clip-path: inset(-3px 4px 0px 4px);
